User request: /edit fv2-wa...

--- a/backend/.env
+++ b/backend/.env
@@ -1,19 +1,17 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="test_database"
+# Database Configuration
+MONGO_URL=mongodb://localhost:27017
+DB_NAME=wallpaper_db
 
-# LiteLLM proxy
-LITELLM_BASE_URL="https://litellm-docker-545630944929.us-central1.run.app"
-LITELLM_AUTH_TOKEN="sk-hp-CZebed93KYV7nKQTgxg"
-CODEXHUB_MCP_AUTH_TOKEN="sk-hp-CZebed93KYV7nKQTgxg"
+# LiteLLM Configuration (DO NOT MODIFY)
+LITELLM_BASE_URL=https://litellm-docker-545630944929.us-central1.run.app
+LITELLM_AUTH_TOKEN=
+CODEXHUB_MCP_AUTH_TOKEN=
 
-# OpenAI → LiteLLM
-OPENAI_API_BASE="https://litellm-docker-545630944929.us-central1.run.app"
-OPENAI_API_KEY="sk-hp-CZebed93KYV7nKQTgxg"
+# Provider Variables (DO NOT MODIFY - automatically set from LITELLM)
+OPENAI_API_BASE=${LITELLM_BASE_URL}
+OPENAI_API_KEY=${LITELLM_AUTH_TOKEN}
+ANTHROPIC_API_KEY=${LITELLM_AUTH_TOKEN}
+GEMINI_API_KEY=${LITELLM_AUTH_TOKEN}
 
-# Anthropic → LiteLLM
-ANTHROPIC_API_BASE="https://litellm-docker-545630944929.us-central1.run.app"
-ANTHROPIC_API_KEY="sk-hp-CZebed93KYV7nKQTgxg"
-
-# Gemini (direct API) → LiteLLM
-GEMINI_API_BASE="https://litellm-docker-545630944929.us-central1.run.app"
-GEMINI_API_KEY="sk-hp-CZebed93KYV7nKQTgxg"
+# AI Model Selection
+AI_MODEL_NAME=gemini-2.5-pro
