User request: /edit fv2-wa...

--- a/backend/.env
+++ b/backend/.env
@@ -15,3 +15,9 @@ GEMINI_API_KEY=${LITELLM_AUTH_TOKEN}
 
 # AI Model Selection
 AI_MODEL_NAME=gemini-2.5-pro
+
+# Anthropic → LiteLLM
+ANTHROPIC_API_BASE="https://litellm-docker-545630944929.us-central1.run.app"
+
+# Gemini (direct API) → LiteLLM
+GEMINI_API_BASE="https://litellm-docker-545630944929.us-central1.run.app"
